# zerosigma-algo

./: .env.example  .gitignore  README.md  notes.md  plan.md  pyproject.toml
config/: portfolio_profiles.yaml  providers.yaml  risk_profiles.yaml  scanner.yaml  strategies.yaml
docs/: phase10_backtest_plan.md  reference_notes.md
profiles/: eod_5k_call_sl150_no_tp_control.yaml  eod_5k_call_tp50_control.yaml  eod_5k_dynamic_sl150_no_tp.yaml  eod_5k_dynamic_sl200_no_tp.yaml  morning_2k_call_no_tp_control.yaml  morning_2k_dynamic_no_tp.yaml  morning_5k_call_tp75_control.yaml  morning_5k_dynamic_tp75.yaml  observe_dynamic_5k.yaml  regime_put_credit_test.yaml  vertical_wing_best_credit_1dte.yaml  vertical_wing_call_only_1dte.yaml  vertical_wing_no_trade.yaml  vertical_wing_score_best_1dte.yaml
scripts/: alerts_smoke.py  backtest_compare.py  backtest_dry_run.py  backtest_learn.py  backtest_optimize.py  backtest_optuna.py  backtest_phase11b_review.py  backtest_robustness_review.py  backtest_run.py  backtest_scan_dates.py  backtest_spx_raw.py  backtest_stress_review.py  build_forward_readiness.py  control_forward.py  diagnose_cockpit_quote_status.py  diagnose_live_readiness.py  diagnose_rth_soak_readiness.py  diagnose_tasty_quotes.py  discover_backtest_sources.py  discover_replay_data.py  manage_profiles.py  paper_execution_smoke.py  probe_tastytrade.py  probe_zs_greek_api.py  review_forward.py  review_notification_dry_run.py  review_portfolio_forward.py  review_profile_readiness.py  review_rth_soak.py  run_eod_summary.py  run_forward.py  run_portfolio_forward.py  run_scanner.py  run_streamlit.py  (+1 more)
(+217 files in other folders)
